# VanitySshSha256

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cuda/: kernel.cu
cuda/ed25519/: fixedint.h
include/: gpu_vanity.h  match_rule.h
src/: main.cpp  match_rule.cpp
